force-app/main/default/objects/Installment__c/Installment__c.object-meta.xml
<CustomObject>
    <label>Installment</label>
    <nameField>
        <displayFormat>INST-{0000}</displayFormat>
        <label>Installment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>