force-app/main/default/objects/Installment__c/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <label>Due date</label>
    <type>DateTime</type>
</CustomField>