force-app/main/default/objects/Installment__c/fields/Due_fee_amount__c.field-meta.xml
<CustomField>
    <fullName>Due_fee_amount__c</fullName>
    <label>Due fee amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>