force-app/main/default/objects/Installment__c/fields/Due_fee_tax__c.field-meta.xml
<CustomField>
    <fullName>Due_fee_tax__c</fullName>
    <label>Due fee tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>