force-app/main/default/objects/Installment__c/fields/due_interest_amount__c.field-meta.xml
<CustomField>
    <fullName>due_interest_amount__c</fullName>
    <label>due interest amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>