force-app/main/default/objects/Installment__c/fields/due_interest_tax__c.field-meta.xml
<CustomField>
    <fullName>due_interest_tax__c</fullName>
    <label>due interest tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>