force-app/main/default/objects/Installment__c/fields/Encoded_key__c.field-meta.xml
<CustomField>
    <fullName>Encoded_key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Encoded key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>