force-app/main/default/objects/Installment__c/fields/expected_fee_tax__c.field-meta.xml
<CustomField>
    <fullName>expected_fee_tax__c</fullName>
    <label>expected fee tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>