force-app/main/default/objects/Installment__c/fields/Expected_penalty_amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_penalty_amount__c</fullName>
    <label>Expected penalty amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>