force-app/main/default/objects/Installment__c/fields/Expected_principal_amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_principal_amount__c</fullName>
    <label>Expected principal amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>