force-app/main/default/objects/Installment__c/fields/Expected_tax_amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_tax_amount__c</fullName>
    <label>Expected tax amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>