force-app/main/default/objects/Installment__c/fields/isPaymentHoliday__c.field-meta.xml
<CustomField>
    <fullName>isPaymentHoliday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPaymentHoliday?</label>
    <type>Checkbox</type>
</CustomField>