force-app/main/default/objects/Installment__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>