force-app/main/default/objects/Installment__c/fields/Paid_fee_tax__c.field-meta.xml
<CustomField>
    <fullName>Paid_fee_tax__c</fullName>
    <label>Paid fee tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>