force-app/main/default/objects/Installment__c/fields/paid_interest_amount__c.field-meta.xml
<CustomField>
    <fullName>paid_interest_amount__c</fullName>
    <label>Paid interest amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>