force-app/main/default/objects/Installment__c/fields/Paid_penalty_tax__c.field-meta.xml
<CustomField>
    <fullName>Paid_penalty_tax__c</fullName>
    <label>Paid penalty tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>