force-app/main/default/objects/Installment__c/fields/Paid_principal_amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_principal_amount__c</fullName>
    <label>Paid principal amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>