force-app/main/default/objects/Installment__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Due_date__c</columns>
    <columns>Number__c</columns>
    <columns>Paid_fee_amount__c</columns>
    <columns>Loan__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>